# docviewer-app

./: .bzrignore  .gitignore  AUTHORS  CMakeList.txt  CMakeLists.txt  ImageView.qml  PdfPage.qml  PdfView.qml  README  README-Autopilot.md  README-Developers.md  README-Mergeproposal.md  README-Translations.md  README.md  README.translations  TextView.qml  UnknowTypeDialog.qml  clickable.json  com.ubuntu.docviewer.desktop.in.in  com.ubuntu.docviewer.url-dispatcher  docviewer-content.json  docviewer-libs.json  docviewer.apparmor  docviewer.qml  get-click-deps  get_deps.sh  loadComponent.js  main.pro  manifest.json  manifest.json.in  run-pep8  snapcraft.yaml  ubuntu-doc-viewer.qml  ubuntu-docviewer-app  ubuntu-docviewer-app.desktop  ubuntu-docviewer-app.desktop.in.in  ubuntu-docviewer-app.json  ubuntu-docviewer-app.qml  ubuntu-docviewer-app.qmlproject
click/: CMakeLists.txt  disable-file-locking.sh  disable-file-locking.xcd  disable-lo-features.sh  disable-spell-check.xcd  docviewer-libs.json  docviewer.apparmor  manifest.json.in
cmake/modules/: Click.cmake
data/: CMakeLists.txt  com.ubuntu.docviewer.desktop.in.in
debian/: changelog  control  copyright  qtdeclarative5-documentviewer-common.install  qtdeclarative5-documentviewer-libreoffice.install  qtdeclarative5-documentviewer-pdf.install  rules  ubuntu-docviewer-app-autopilot.install  ubuntu-docviewer-app.install
launcher/src/: docviewer-launcher.pri  docviewer-launcher.pro  file.cpp  file.h  main.cpp  main.h
plugins/file-qml-plugin/: CMakeLists.txt  docviewerFile.h  qmldir
po/: CMakeLists.txt  af.po  am.po  ar.po  ast.po  br.po  bs.po  ca.po  com.ubuntu.docviewer.pot  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  lo.po  lv.po  nb.po  nl.po  ny.po  pa.po  pl.po  pt.po  pt_BR.po  (+15 more)
setup/gui/: ubuntu-docviewer-app.desktop
src/: CMakeLists.txt
src/app/: CMakeLists.txt  TextView.qml  command-line-parser.cpp  command-line-parser.h  config.h  config.h.in  content-communicator.cpp  content-communicator.h  docviewer-application.cpp  docviewer-application.h  loadComponent.js  main.cpp  renderengine.cpp  renderengine.h  rendertask.cpp  rendertask.h  urlhandler.cpp  urlhandler.h
src/app/qml/: ContentHubPicker.qml  ContentHubProxy.qml  DetailsPage.qml  ErrorDialog.qml  ImageView.qml  ImageViewDefaultHeader.qml  PdfContentsPage.qml  PdfPage.qml  PdfView.qml  PdfViewDefaultHeader.qml  PdfViewDelegate.qml  PdfViewGotoDialog.qml  TextView.qml  TextViewDefaultHeader.qml  UnknownTypeDialog.qml  WelcomePage.qml  ZoomableImage.qml  loadComponent.js  ubuntu-docviewer-app.qml  utils.js
src/app/qml/common/: CommandLineProxy.qml  ContentHubProxy.qml  DetailsPage.qml  EmptyState.qml  ErrorDialog.qml  FileNotFoundDialog.qml  HorizontalDivider.qml  NightModeShader.qml  PageWithBottomEdge.qml  PickImportedDialog.qml  RejectedImportDialog.qml  ResizeableSidebar.qml  ScalingMouseArea.qml  ScalingPinchArea.qml  SubtitledListItem.qml  TextFieldButtonPopover.qml  TextFieldWithButton.qml  TextualButtonStyle.qml  Toast.qml  ToastWithAction.qml  UnknownTypeDialog.qml  VerticalDivider.qml  ViewerPage.qml  loadComponent.js  utils.js
src/app/qml/documentPage/: DeleteFileDialog.qml  DocumentDelegateActions.qml  DocumentEmptyState.qml  DocumentGridDelegate.qml  DocumentGridView.qml  DocumentListDelegate.qml  DocumentListView.qml  DocumentPage.qml  DocumentPageDefaultHeader.qml  DocumentPagePickModeHeader.qml  DocumentPageSearchHeader.qml  DocumentPageSelectionModeHeader.qml  SearchEmptyState.qml  SectionHeader.qml  SharePage.qml  SortSettingsDialog.qml  TileBase.qml
src/app/qml/loView/: BottomPanel.qml  KeybHelper.js  LOView.qml  LOViewDefaultHeader.qml  LOViewDelegate.qml  LOViewGotoDialog.qml  LOViewPage.qml  LOViewZoomHeader.qml  PanelButton.qml  PartsView.qml  SlideControllerPanel.qml  Splashscreen.qml  SpreadsheetSelector.qml  ZoomSelector.qml
src/app/qml/loView/graphics/: dropshadow@27.sci
src/app/qml/pdfView/: PdfContentsPage.qml  PdfPresentation.qml  PdfView.qml  PdfViewDefaultHeader.qml  PdfViewDelegate.qml  PdfViewGotoDialog.qml
src/app/qml/textView/: TextView.qml  TextViewDefaultHeader.qml
src/app/qml/upstreamComponents/: EmptyState.qml  MultipleSelectionGridView.qml  PageWithBottomEdge.qml
src/app/quick/: documentmodel.cpp  documentmodel.h  docviewerFile.cpp  docviewerfile.cpp  docviewerfile.h
src/plugin/: CMakeLists.txt
src/plugin/file-qml-plugin/: CMakeLists.txt  backend.cpp  backend.h  documentmodel.cpp  documentmodel.h  documentviewersingleton.cpp  documentviewersingleton.h  docviewerFile.cpp  docviewerFile.h  docviewerfile.cpp  docviewerfile.h  docviewerutils.cpp  docviewerutils.h  fileReader.cpp  fileReader.h  fswatcher.cpp  fswatcher.h  main.pro  qmldir
src/plugin/libreofficetoolkit-qml-plugin/: CMakeLists.txt  LOViewer.qml  config.h  libreoffice2png.cxx  lodocument.cpp  lodocument.h  loerror.h  loimageprovider.cpp  loimageprovider.h  lopartsimageprovider.cpp  lopartsimageprovider.h  lopartsimageresponse.cpp  lopartsimageresponse.h  lopartsmodel.cpp  lopartsmodel.h  lorendertask.cpp  lorendertask.h  loview.cpp  loview.h  lozoom.cpp  lozoom.h  plugin.cpp  plugin.h  qmldir  renderengine.cpp  renderengine.h  rendertask.cpp  rendertask.h  sgtileitem.cpp  sgtileitem.h  tileitem.cpp  tileitem.h  twips.h
src/plugin/libreofficetoolkit-qml-plugin/LibreOfficeKit/: LibreOfficeKitInit.h
src/plugin/libreofficetoolkit-qml-plugin/qml/: Viewer.qml
src/plugin/poppler-qml-plugin/: CMakeLists.txt  pageImageProvider.cpp  pagesWorkerThread.cpp  pagesWorkerThread.h  pdfModel.cpp  pdfModel.h  pdfPage.cpp  pdfPage.h  pdfdocument.cpp  pdfdocument.h  pdfimageprovider.cpp  pdfimageprovider.h  pdfitem.cpp  pdfitem.h  pdfthread.cpp  pdfthread.h  pdftocmodel.cpp  pdftocmodel.h  plugin.cpp  plugin.h  qmldir  verticalview.cpp  verticalview.h
tests-disabled/autopilot/: CMakeLists.txt
tests/autopilot/: CMakeLists.txt
tests/autopilot/ubuntu_docviewer_app/: CMakeLists.txt  __init__.py  (+1 more)
tools/: get-click-deps  run-pep8
(+10 files in other folders)
